[project]
name = "tal_trip_planner"
version = "0.1.0"
description = "tal-trip-planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
tal_trip_planner = "tal_trip_planner.main:run"
run_crew = "tal_trip_planner.main:run"
train = "tal_trip_planner.main:train"
replay = "tal_trip_planner.main:replay"
test = "tal_trip_planner.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
